--- a/src/components/content/CardPost.astro
+++ b/src/components/content/CardPost.astro
@@ -13,10 +13,10 @@ const href = getEntryURL("blog", post.slug);
 ---
 
 <div
-  class="group flex flex-col justify-between rounded-md p-4 text-slate-800 ring-blue-100 transition-all hover:bg-blue-50 hover:shadow-sm hover:ring-2 dark:text-slate-200 dark:ring-gray-700 dark:hover:bg-gray-950/50"
+  class="group flex flex-col justify-between rounded-md p-4 text-slate-800 ring-blue-100 transition-all focus-within:bg-blue-50 focus-within:shadow-sm focus-within:ring-2 hover:bg-blue-50 hover:shadow-sm hover:ring-2 dark:text-slate-200 dark:ring-gray-700 dark:focus-within:bg-gray-950/50 dark:hover:bg-gray-950/50"
 >
   <div>
-    <a href={href} class="block hover:underline">
+    <a href={href} class="hover:underlinoe block focus:outline-none">
       <h2
         class="mb-2 text-2xl font-semibold text-slate-900 group-hover:text-slate-950 dark:text-blue-50 dark:group-hover:text-slate-100 md:mb-4"
       >
