--- a/src/layouts/pages/Contact.astro
+++ b/src/layouts/pages/Contact.astro
@@ -41,6 +41,7 @@ const t = useTranslation(lang);
 ---
 
 <Layout
+  noHeaderSpacing
   lang={lang}
   canonical={canonical}
   description={t("page_descriptions", PAGE)}
