fix contact page on tablet

--- a/src/layouts/pages/Contact.astro
+++ b/src/layouts/pages/Contact.astro
@@ -60,7 +60,7 @@ const t = useTranslation(lang);
             </div>
           </div>
         </div>
-        <div class="px-6 py-4 sm:px-8 lg:py-12 xl:px-24">
+        <div class="px-6 py-4 sm:px-8 lg:mt-20 lg:py-12 xl:mt-0 xl:px-24">
           <ContactForm client:idle action="/api/contact" lang={lang} />
         </div>
       </div>
