fix admonition anchor styles and add body::selection styles

--- a/src/components/content/Admonition/Admonition.astro
+++ b/src/components/content/Admonition/Admonition.astro
@@ -23,7 +23,7 @@ const color = {
 
 <div
   class:list={[
-    "prose-p:m-0 relative rounded-sm p-2 pl-4 shadow-sm prose-a:font-normal prose-strong:text-current",
+    "prose-p:m-0 relative rounded-sm p-2 pl-4 shadow-sm prose-a:font-normal prose-strong:text-current prose-a:text-current",
     color,
     className,
   ]}
