fix command bar content position and logo size on mobile

--- a/src/components/layout/Header.astro
+++ b/src/components/layout/Header.astro
@@ -33,7 +33,7 @@ const t = useTranslation(lang);
       <div class="grid flex-1 items-center justify-center md:grid-cols-6 md:gap-4 lg:grid-cols-4">
         <div class="col-start-2 flex shrink-0 items-center md:col-span-2 md:col-start-1 lg:col-span-1">
           <a
-            class="font-mono text-2xl font-extralight text-slate-600 dark:text-slate-200 md:text-lg xl:text-2xl" 
+            class="font-mono text-xl font-extralight text-slate-600 dark:text-slate-200 md:text-lg xl:text-2xl" 
             href={getLocalizedPage(lang, "home")}
           >
             <span aria-hidden="true"
