improve typography in other places
Make the prose config for post a global typography config

--- a/src/pages/[lang]/blog/[...entrySlug]/index.astro
+++ b/src/pages/[lang]/blog/[...entrySlug]/index.astro
@@ -34,7 +34,7 @@ const components = { Admonition: Admonition };
   image={imageURL}
 >
   <main
-    class="prose prose-slate mx-auto mt-4 px-4 dark:prose-invert lg:prose-lg 2xl:prose-xl prose-headings:font-display prose-img:mx-auto prose-img:rounded-sm prose-img:shadow-sm"
+    class="prose prose-slate mx-auto mt-4 px-4 dark:prose-invert lg:prose-lg 2xl:prose-xl"
   >
     <div class="not-prose">
       {!!translations.length && <PostTranslations lang={meta.lang} translations={translations} />}
