--- a/src/layouts/pages/About.astro
+++ b/src/layouts/pages/About.astro
@@ -44,9 +44,9 @@ const t = useTranslation(lang);
   translations={translations}
 >
   <main>
-    <PageBanner class="!bg-blue-100 dark:!bg-gray-950">
+    <PageBanner class="bg-blue-100 dark:bg-gray-950">
       {t("messages", "cv_is_available_in")}
-      {" "}<a href={cvLink} download="taverasmisael-frontend-engineer-resume.pdf" class="text-blue-500 underline"
+      {" "}<a href={cvLink} download="taverasmisael-frontend-engineer-resume.pdf" class="underline"
         >{t("ui", "download_here").toLocaleLowerCase()}</a
       >.
     </PageBanner>
