--- a/src/layouts/pages/About.astro
+++ b/src/layouts/pages/About.astro
@@ -46,8 +46,10 @@ const t = useTranslation(lang);
   <main>
     <PageBanner class="bg-blue-100 dark:bg-gray-950">
       {t("messages", "cv_is_available_in")}
-      {" "}<a href={cvLink} download="taverasmisael-frontend-engineer-resume.pdf" class="underline"
-        >{t("ui", "download_here").toLocaleLowerCase()}</a
+      {" "}<a
+        href={cvLink}
+        download="/taverasmisael-frontend-engineer-resume.pdf"
+        class="underline">{t("ui", "download_here").toLocaleLowerCase()}</a
       >.
     </PageBanner>
     <div class="container mx-auto w-full">
