--- a/src/layouts/pages/Home.astro
+++ b/src/layouts/pages/Home.astro
@@ -47,6 +47,7 @@ const t = useTranslation(lang);
             src={ProfilePic}
             width={500}
             height={500}
+            loading="eager"
             class="md:max-full block w-52 max-w-full rotate-3 rounded-md transition-transform hover:rotate-0 hover:scale-95 hover:rounded-lg sm:w-72 md:w-96"
           />
         </div>
