move monospace font to the Entry layout
We don't use monospaced fonts on the other pages, so it's safe to asume we can move them there
This added a LOT of speed to the font loading

--- a/src/layouts/Entry.astro
+++ b/src/layouts/Entry.astro
@@ -1,7 +1,8 @@
 ---
-import Layout from "./WithHeader.astro";
+import "@fontsource-variable/fira-code";
 import { DEFAULT_LOCALE } from "@/utils/i18n";
 import type { DefaultLayoutProps } from "./types";
+import Layout from "./WithHeader.astro";
 
 type Props = DefaultLayoutProps;
 
