--- a/src/pages/es/index.astro
+++ b/src/pages/es/index.astro
@@ -19,8 +19,9 @@ const urls = {
     </p>
     <p class="mb-2 md:mb-4">Soy un <span>FrontEnd Engineer</span> de República Dominicana.</p>
     <p class="mb-4 md:mb-6">
-      Me encanta trabajar con <span class="font-semibold">React</span>, <span class="font-semibold">TypeScript</span>,
-      and <span class="font-semibold">Node</span>.
+      Me encanta trabajar con <span class="font-semibold">React</span>, <span class="font-semibold">TypeScript</span> y <span
+        class="font-semibold">Node</span
+      >.
     </p>
     <p>
       Conoce más <a href={urls.about} class="font-semibold text-slate-950 underline dark:text-white" rel="prefetch"
@@ -32,7 +33,7 @@ const urls = {
   <Fragment slot="blog">
     <h2>Lo que escribo</h2>
     <p>
-      En el blog podrás encontrar articulos sobre programación y software en general, pero tambien toco temas como la
+      En el blog podrás encontrar artículos sobre programación y software en general, pero también toco temas como la
       comunicación, productividad y aprendizaje.
     </p>
     <p>
