--- a/src/components/layout/Header.astro
+++ b/src/components/layout/Header.astro
@@ -33,7 +33,7 @@ const t = useTranslation(lang);
       </div>
       <div class="grid flex-1 items-center justify-center md:grid-cols-6 md:gap-4 lg:grid-cols-4">
         <div class="col-start-2 flex shrink-0 items-center md:col-span-2 md:col-start-1 lg:col-span-1">
-          <a class="inline-block" href={getLocalizedPage(lang, "home")}>
+          <a class="inline-block" href={getLocalizedPage(lang, "home")} title={t('navigation', 'go_home')}>
             <svg viewBox="0 0 300 32" class="w-56 max-w-full md:w-72" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path
                 d="M18.163 9.564L7.78 16.026l10.382 6.547-1.077 1.336-10.827-6.792v-2.24l10.97-6.778.934 1.465zm275.625 5.313v2.24l-10.827 6.792-1.077-1.393 10.382-6.49-14.144-8.86-10.094 20.72-1.479-.646 12.363-25.415 1.45.732-1.507 3.087 14.933 9.233z"
