--- a/src/components/layout/MinimalHeader.astro
+++ b/src/components/layout/MinimalHeader.astro
@@ -12,7 +12,7 @@ const t = useTranslation(lang);
 <header class="relative top-0 z-40 w-full bg-slate-50 shadow-md dark:bg-gray-900">
   <div class="mx-auto max-w-7xl px-2 sm:border-none sm:px-6 lg:px-8">
     <div class="relative flex h-20 items-center justify-between">
-      <a class="inline-block" href={getLocalizedPage(lang, "home")}>
+      <a class="inline-block" href={getLocalizedPage(lang, "home")} title={t("navigation", "go_home")}>
         <svg viewBox="0 0 300 32" class="w-56 max-w-full md:w-72" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path
             d="M18.163 9.564L7.78 16.026l10.382 6.547-1.077 1.336-10.827-6.792v-2.24l10.97-6.778.934 1.465zm275.625 5.313v2.24l-10.827 6.792-1.077-1.393 10.382-6.49-14.144-8.86-10.094 20.72-1.479-.646 12.363-25.415 1.45.732-1.507 3.087 14.933 9.233z"
