--- a/src/components/layout/MinimalHeader.astro
+++ b/src/components/layout/MinimalHeader.astro
@@ -9,7 +9,7 @@ const lang = Astro.props.lang ?? DEFAULT_LOCALE;
 const t = useTranslation(lang);
 ---
 
-<header class="relative top-0 z-40 w-full bg-slate-50 shadow-md dark:bg-gray-900">
+<header id="header" class="relative top-0 w-full bg-slate-50 shadow-md dark:bg-gray-900">
   <div class="mx-auto max-w-7xl px-2 sm:border-none sm:px-6 lg:px-8">
     <div class="relative flex h-20 items-center justify-between">
       <a class="inline-block" href={getLocalizedPage(lang, "home")} title={t("navigation", "go_home")}>
