--- a/src/layouts/Basic.astro
+++ b/src/layouts/Basic.astro
@@ -31,7 +31,7 @@ const { origin } = Astro.url;
 ---
 
 <!DOCTYPE html>
-<html lang={lang} class:list={{ "h-screen": fullHeight }}>
+<html lang={lang} class:list={{ "h-screen": fullHeight }} class="scroll-smooth">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
