move GTT to a component. Only show after a full scroll

--- a/src/layouts/WithMiniHeader.astro
+++ b/src/layouts/WithMiniHeader.astro
@@ -4,6 +4,7 @@ import Basic from "./Basic.astro";
 import Header from "@/components/layout/MinimalHeader.astro";
 import { DEFAULT_LOCALE } from "@/utils/i18n";
 import type { DefaultLayoutProps } from "./types";
+import GoToTop from "@/components/layout/GoToTop.astro";
 
 type Props = DefaultLayoutProps;
 
@@ -37,4 +38,5 @@ const {
   </Fragment>
   <Header lang={lang} />
   <slot />
+  <GoToTop lang={lang} />
 </Basic>
