--- a/src/layouts/Basic.astro
+++ b/src/layouts/Basic.astro
@@ -39,7 +39,7 @@ const { origin } = Astro.url;
     <link rel="alternate icon" type="image/x-icon" href="/favicon.ico?v=2" />
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png?v=2" />
     <meta name="theme-color" content="hsl(228, 84%, 5%)" media="(prefers-color-scheme: dark)" />
-    <meta name="theme-color" content="hsl(0, 0, 100%)" media="(prefers-color-scheme: light)" />
+    <meta name="theme-color" content="hsl(0, 0, 100%)" />
     <meta name="docsearch:language" content={lang} />
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
