use static header instead (#17)
* make header static :sad:

* create go to top functionality

* move GTT to a component. Only show after a full scroll

* remove link on en/about

* use light theme-color as default

* TIL: viewport units don't consider the scrollbar

And there are a few fixes but they either require JS or non-fully compatible
css properties. We are sure we don't need horizontal scroll, so we can do a
good old `overflow-x: hidden`

--- a/src/layouts/WithHeader.astro
+++ b/src/layouts/WithHeader.astro
@@ -4,6 +4,7 @@ import Basic from "./Basic.astro";
 import Header from "@/components/layout/Header.astro";
 import { DEFAULT_LOCALE } from "@/utils/i18n";
 import type { DefaultLayoutProps } from "./types";
+import GoToTop from "@/components/layout/GoToTop.astro";
 
 interface Props extends DefaultLayoutProps {
   noHeaderSpacing?: boolean;
@@ -39,7 +40,6 @@ const {
     <slot name="head" />
   </Fragment>
   <Header lang={lang} />
-  <!-- This is a hack to prevent the header from overlapping the content -->
-  {!noHeaderSpacing && <div aria-hidden="true" class="h-20" />}
   <slot />
+  <GoToTop lang={lang} />
 </Basic>
