testing using unocss instead of tailwind
Of course we are using the wind preset because I don't want to rebuild the system.
In the future we can consider replacing it.

At the moment there are "issues" with the typography module

--- a/src/layouts/Basic.astro
+++ b/src/layouts/Basic.astro
@@ -31,7 +31,7 @@ const { origin } = Astro.url;
 ---
 
 <!DOCTYPE html>
-<html lang={lang} class:list={{ "h-screen": fullHeight }} class="overflow-x-hidden scroll-smooth">
+<html lang={lang} class:list={{ "h-screen": fullHeight }} class="overflow-x-hidden scroll-smooth font-sans">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
