--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -29,17 +29,17 @@ const canonical = slugToCanonical("/404");
   lang={lang}
   description={t("page_descriptions", "not_found")}
   title={t("messages", "page_not_found")}
-  class="flex h-full flex-col dark:!bg-slate-900"
+  class="h-full flex flex-col dark:!bg-slate-900"
 >
-  <main class="grid flex-1 place-items-center px-6 py-24 sm:py-32 lg:px-8">
+  <main class="grid flex-1 place-items-center px-6 py-24 lg:px-8 sm:py-32">
     <div class="text-center">
-      <p class="text-xl text-blue-500 dark:text-blue-200 sm:text-4xl">404</p>
+      <p class="text-xl text-blue-500 sm:text-4xl dark:text-blue-200">404</p>
       <h1 class="mb-10 text-4xl font-bold sm:mb-12 sm:text-6xl">{t("page_descriptions", "not_found")}</h1>
       <p class="mb-24 sm:mb-20">{t("messages", "page_not_found_message")}</p>
       <div class="space-x-8">
         <a
           href={homeURL}
-          class="inline-block rounded-md bg-blue-50 px-6 py-3 font-semibold shadow-sm transition-colors hover:bg-blue-100/50 active:bg-blue-100 dark:bg-slate-800 dark:hover:bg-slate-800/90 dark:active:bg-slate-800/70"
+          class="inline-block rounded-md bg-blue-50 px-6 py-3 font-semibold shadow-sm transition-colors active:bg-blue-100 dark:bg-slate-800 hover:bg-blue-100/50 dark:active:bg-slate-800/70 dark:hover:bg-slate-800/90"
           >{t("navigation", "go_home")}</a
         >
 
