--- a/src/pages/[lang]/blog/[...entrySlug]/index.astro
+++ b/src/pages/[lang]/blog/[...entrySlug]/index.astro
@@ -34,7 +34,7 @@ const components = { Admonition: Admonition };
   image={imageURL}
 >
   <main
-    class="prose-slate prose mx-auto mt-4 px-4 dark:prose-invert 2xl:prose-xl lg:prose-lg"
+    class="prose mx-auto mt-4 px-4 dark:prose-invert 2xl:prose-xl lg:prose-lg"
   >
     <div class="not-prose">
       {!!translations.length && <PostTranslations lang={meta.lang} translations={translations} />}
