--- a/src/components/PostTranslations.astro
+++ b/src/components/PostTranslations.astro
@@ -14,7 +14,7 @@ const t = useTranslation(Astro.props.lang);
 ---
 
 <aside class="my-4 rounded-sm bg-blue-100 p-4 text-sm dark:bg-slate-700" class:list={className}>
-  <div class="container mx-auto max-w-4xl">
+  <div class="mx-auto max-w-4xl container">
     <p>
       {t("ui", "translation_available_in")}:
       {
