--- a/src/components/content/FullWidthBlock.astro
+++ b/src/components/content/FullWidthBlock.astro
@@ -8,10 +8,10 @@ interface Props {
 const { class: className, ["class:list"]: classList, withContainer } = Astro.props;
 ---
 
-<section class="relative left-[calc(-50vw_+_50%)] w-screen min-w-full px-8 py-12" class:list={[className, classList]}>
+<section class="relative left-[calc(-50vw_+_50%)] min-w-full w-screen px-8 py-12" class:list={[className, classList]}>
   {
     withContainer ? (
-      <div class="container mx-auto w-full">
+      <div class="mx-auto w-full container">
         <slot />
       </div>
     ) : (
