--- a/src/components/layout/Footer.astro
+++ b/src/components/layout/Footer.astro
@@ -49,7 +49,7 @@ const translations = propTranslations.concat(currentLanguage);
 ---
 
 <footer
-  class="mx-auto mt-8 w-full max-w-7xl border-t border-slate-200/50 px-2 py-6 text-center dark:border-slate-700/50 sm:px-6 sm:text-left"
+  class="mx-auto mt-8 max-w-7xl w-full border-t border-slate-200/50 px-2 py-6 text-center dark:border-slate-700/50 sm:px-6 sm:text-left"
 >
   <div class="flex items-center justify-center gap-4 pb-6 sm:justify-between">
     <ThemeSelector lang={lang} client:visible />
@@ -76,7 +76,7 @@ const translations = propTranslations.concat(currentLanguage);
         }
       </div>
     </div>
-    <p class="block pt-2 text-slate-700 dark:text-slate-300 sm:hidden">
+    <p class="block pt-2 text-slate-700 sm:hidden dark:text-slate-300">
       <strong class="font-semibold">Misael Taveras</strong> ©️{year}
     </p>
   </div>
