--- a/src/components/layout/Header.astro
+++ b/src/components/layout/Header.astro
@@ -13,8 +13,8 @@ const t = useTranslation(lang);
 ---
 
 <header id="header" class="top-0 w-full bg-white shadow-md transition-transform dark:bg-slate-950">
-  <div class="mx-auto max-w-7xl px-2 md:border-none md:px-6 lg:px-8">
-    <div class="relative flex h-20 items-center justify-between">
+  <div class="mx-auto max-w-7xl px-2 md:border-none lg:px-8 md:px-6">
+    <div class="relative h-20 flex items-center justify-between">
       <div class="absolute inset-y-0 left-0 flex items-center md:hidden">
         <button
           type="button"
@@ -31,10 +31,10 @@ const t = useTranslation(lang);
           </svg>
         </button>
       </div>
-      <div class="grid flex-1 items-center justify-center md:grid-cols-6 md:gap-4 lg:grid-cols-4">
-        <div class="col-start-2 flex shrink-0 items-center md:col-span-2 md:col-start-1 lg:col-span-1">
+      <div class="grid flex-1 items-center justify-center lg:grid-cols-4 md:grid-cols-6 md:gap-4">
+        <div class="col-start-2 flex shrink-0 items-center lg:col-span-1 md:col-span-2 md:col-start-1">
           <a class="inline-block" href={getLocalizedPage(lang, "home")} title={t('navigation', 'go_home')}>
-            <svg viewBox="0 0 300 32" class="w-56 max-w-full md:w-72" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <svg viewBox="0 0 300 32" class="max-w-full w-56 md:w-72" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path
                 d="M18.163 9.564L7.78 16.026l10.382 6.547-1.077 1.336-10.827-6.792v-2.24l10.97-6.778.934 1.465zm275.625 5.313v2.24l-10.827 6.792-1.077-1.393 10.382-6.49-14.144-8.86-10.094 20.72-1.479-.646 12.363-25.415 1.45.732-1.507 3.087 14.933 9.233z"
                 class="fill-slate-600 dark:fill-slate-100"></path>
@@ -44,7 +44,7 @@ const t = useTranslation(lang);
             </svg>
           </a>
         </div>
-        <div class="hidden md:col-span-3 md:block lg:col-span-2">
+        <div class="hidden lg:col-span-2 md:col-span-3 md:block">
           <Nav lang={lang} activePage={basePath} />
         </div>
         <div class="insert-0 absolute right-1 flex items-center justify-self-end pr-2 md:relative md:right-0">
