--- a/src/layouts/Basic.astro
+++ b/src/layouts/Basic.astro
@@ -65,7 +65,7 @@ const { origin } = Astro.url;
     </script>
   </head>
   <body
-    class="bg-slate-50 text-slate-900 selection:bg-slate-400 selection:text-slate-950 dark:bg-gray-800 dark:text-slate-100"
+    class="bg-slate-50 text-slate-900 dark:bg-gray-800 selection:bg-slate-400 dark:text-slate-100 selection:text-slate-950"
     class:list={[className, classList]}
   >
     <slot />
