--- a/src/pages/[lang]/blog/index.astro
+++ b/src/pages/[lang]/blog/index.astro
@@ -46,14 +46,14 @@ const t = useTranslation(lang);
 >
   <TranslationArchiveBanner lang={lang} type="blog" />
   <main>
-    <div class="container mx-auto w-full p-8 md:py-24">
-      <div class="mb-4 grid gap-4 sm:grid-cols-2 md:mb-8 md:grid-cols-3 md:gap-8 lg:grid-cols-4">
+    <div class="mx-auto w-full p-8 container md:py-24">
+      <div class="grid mb-4 gap-4 lg:grid-cols-4 md:grid-cols-3 sm:grid-cols-2 md:mb-8 md:gap-8">
         <div class="col-span-full lg:col-span-2">
           <FeaturedPost meta={featuredPost.meta} post={featuredPost.entry} />
         </div>
         <!-- Semi featured -->
-        <div class="col-span-full divide-y lg:col-span-2">
-          <div class="flex h-full flex-col justify-between">
+        <div class="col-span-full lg:col-span-2 divide-y">
+          <div class="h-full flex flex-col justify-between">
             {posts.slice(0, 2).map(post => <CardPost meta={post.meta} post={post.entry} />)}
           </div>
         </div>
@@ -61,8 +61,8 @@ const t = useTranslation(lang);
     </div>
     <!-- Rest of the posts -->
     <div class="bg-white dark:bg-gray-800">
-      <div class="container mx-auto w-full px-8 py-12">
-        <div class="grid gap-x-8 gap-y-4 sm:grid-cols-2 lg:grid-cols-3">
+      <div class="mx-auto w-full px-8 py-12 container">
+        <div class="grid gap-x-8 gap-y-4 lg:grid-cols-3 sm:grid-cols-2">
           {posts.slice(2).map(post => <CardPost meta={post.meta} post={post.entry} />)}
         </div>
       </div>
