--- a/src/components/command-bar/CommandBarStyles.module.css
+++ b/src/components/command-bar/CommandBarStyles.module.css
@@ -1,3 +1,3 @@
 .description mark {
-  @apply bg-slate-100 dark:bg-slate-800 dark:text-white p-1 font-semibold;
+  @apply bg-slate-100 p-1 font-semibold dark:bg-slate-800 dark:text-white;
 }
